# trades-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
scripts/: update_data.py
trades_mcp/: __init__.py
trades_mcp/data/: bls_series.json  bond_requirements.json  insurance_requirements.json  labor_rates.json  material_prices.json  project_costs.json  regional_multipliers.json
trades_mcp/src/: config.py  demo_data.py  licenses.py  models.py  permits.py  pricing.py  server.py
trades_mcp/tests/: test_demo_mode.py  test_error_handling.py  test_live_clients.py  test_models.py  test_server.py  test_tools.py
